# fastenerpattern

./: .gitignore  CHECKLIST-RELEASE.md  CMakeLists.txt  FastenerPattern_Qt.pro  FastenerPattern_config.pri  README.md  TROUBLESHOOTING  doxyfile  doxygenMain.cpp  version.pri
3rd/: 3rd.pri  CMakeLists.txt  boost.pri.cmake
cpsolver/: README.md
include/Core/: AbstractSpliceModel  Calculator  DesignSpace  Fastener  Splice  SpliceCalculator  SpliceCommand  Tensor
include/Core/Optimizer/: Controller  OptimisationSolver
include/Core/Solvers/: ISolver  Parameters  RigidBodySolver
include/Core/Units/: AreaMomentOfInertia  UnitSystem
include/Dialogs/: PropertiesDialog
include/Editor/: BackgroundWidget  SpliceGraphicsWidget
include/Math/: Delaunay  Utils
include/Maths/: Delaunay  Utils
include/Utils/: DelayTimer
include/Widgets/: AbstractSpliceView  AppliedLoadWidget  DesignObjectiveWidget  DesignOptionWidget  DesignSpaceWidget  DesignVariableWidget  FastenerTableWidget  FastenerWidget  MainWidget  OptimisationWidget  ResultWidget  SolverWidget  SpliceToolbar  TableWidget
src/: CMakeLists.txt  about.h  config.h.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  resources_win.rc  src.pro  version.h
src/core/: CMakeLists.txt  abstractsplicemodel.cpp  abstractsplicemodel.h  calculator.cpp  calculator.h  core.pri  designspace.cpp  designspace.h  fastener.cpp  fastener.h  global.h  splice.cpp  splice.h  splicecalculator.cpp  splicecalculator.h  splicecommand.cpp  splicecommand.h  tensor.cpp  tensor.h
src/core/optimizer/: controller.cpp  controller.h  maxminload.cpp  maxminload.h  optimisationsolver.cpp  optimisationsolver.h
src/core/solvers/: isolver.h  parameters.cpp  parameters.h  rigidbodysolver.cpp  rigidbodysolver.h
src/core/units/: area_moment_of_inertia.h  unit_system.h
src/dialogs/: CMakeLists.txt  dialogs.pri  propertiesdialog.cpp  propertiesdialog.h  propertiesdialog.ui
src/editor/: CMakeLists.txt  backgroundview.cpp  backgroundview.h  backgroundwidget.cpp  backgroundwidget.h  editor.pri  flexiblescrollbar.cpp  flexiblescrollbar.h  splicegraphicswidget.cpp  splicegraphicswidget.h
src/editor/items/: appliedloaditem.cpp  appliedloaditem.h  arcarrowitem.cpp  arcarrowitem.h  arrowitem.cpp  arrowitem.h  designspaceitem.cpp  designspaceitem.h  fasteneritem.cpp  fasteneritem.h  handleitem.cpp  handleitem.h  measureitem.cpp  measureitem.h  scalableimageitem.cpp  scalableimageitem.h  scalablepointitem.cpp  scalablepointitem.h  symbolitem.cpp  symbolitem.h  tensoritem.cpp  tensoritem.h  utils_scale.h
src/examples/: 4BoltJoint.splice  Optimize_4BoltJoint.splice  PatternJoint.splice  RandomJoint.splice  examples.qrc
src/icons/logo/: logo.odp  logo.svg.7z
src/math/: CMakeLists.txt  delaunay.cpp  delaunay.h  utils.h
src/maths/: CMakeLists.txt  delaunay.cpp  delaunay.h  maths.pri  utils.h
src/utils/: CMakeLists.txt  delaytimer.cpp  delaytimer.h  utils.pri
src/widgets/: CMakeLists.txt  abstractspliceview.cpp  abstractspliceview.h  appliedloadwidget.cpp  appliedloadwidget.h  appliedloadwidget.ui  designobjectivewidget.cpp  designobjectivewidget.h  designobjectivewidget.ui  designoptionwidget.cpp  designoptionwidget.h  designoptionwidget.ui  designspacewidget.cpp  designspacewidget.h  designspacewidget.ui  designvariablewidget.cpp  designvariablewidget.h  designvariablewidget.ui  fastenertablewidget.cpp  fastenertablewidget.h  fastenertablewidget.ui  fastenerwidget.cpp  fastenerwidget.h  fastenerwidget.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  optimisationwidget.cpp  optimisationwidget.h  optimisationwidget.ui  resultwidget.cpp  resultwidget.h  resultwidget.ui  solverwidget.cpp  solverwidget.h  solverwidget.ui  splicetoolbar.cpp  splicetoolbar.h  tablewidget.cpp  tablewidget.h  (+2 more)
test/: README.md  test.pro
test/boost/: CMakeLists.txt  boost.pro  tst_boost.cpp
test/delaunay/: CMakeLists.txt  delaunay.pro  tst_delaunay.cpp
test/math/: CMakeLists.txt  math.pro  tst_utils.cpp
test/optimisationsolver/: CMakeLists.txt  dummysolver.cpp  dummysolver.h  optimisationsolver.pro  tst_optimisationsolver.cpp
test/rigidbodysolver/: CMakeLists.txt  rigidbodysolver.pro  tst_rigidbodysolver.cpp
test/splicecalculator/: CMakeLists.txt  splicecalculator.pro  tst_splicecalculator.cpp
test/tensor/: CMakeLists.txt  tensor.pro  tst_tensor.cpp
user-manual/: User_Manual.odt
